--- a/front/index/index.css
+++ b/front/index/index.css
@@ -67,20 +67,25 @@
   word-wrap: break-word;
 }
 
-#preview:hover {
-  cursor: pointer;
-  text-decoration: underline;
-  color: #0077b6;
-}
-
 #picture {
   height: 100%;
   aspect-ratio: 1/1;
+  overflow: hidden;
+  position: relative;
+}
+
+#picture:hover {
+  cursor: pointer;
 }
 
 #picture img {
-  height: 100%;
+  width: 100%;
   aspect-ratio: 1/1;
   object-fit: cover;
-  cursor: pointer;
+  transition: transform 0.5s, filter 0.5s;
+}
+
+#picture:hover img {
+  transform: scale(1.1);
+  filter: brightness(80%);
 }
